[package]
name = "iterate-trait"
version = "1.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/iterate-trait"
documentation = "https://docs.rs/iterate-trait"
description = "Experiment with methods on IntoIterator"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]

[dev-dependencies]
